Starting Front End

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
-$body-bg: #f2f2f2;
-$primary: #3BA5DC;
-$secondary: #FF3697;
-$danger: #EB5757;
-$success: #27AE60;
-$warning: #FF7F50;
-$info: #00C9BD;
-$dark: #313130;
+$body-bg: #dfe2dc;
+$primary: #6bb2b6;
+$secondary: #fefcf9;
+$danger: #b33214;
+$success: #2f2f10;
+$warning: #e0d85e;
+$info: #847342;
+$dark: #2c4059;
